2019-12-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Clear expression entry when escape key is pressed

2019-11-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not automatically recalculate expressions with answer variables when calculation/parsing mode has changed

2019-11-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Options to customize the window title - different modes selectable in preferences, command line option, and settitle() function

2019-11-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to select custom application font

2019-11-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix automatic use quotation marks for text arguments in input function dialog
	* Option to select custom keypad font

2019-10-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Reset calculate-as-you-type history timeout on cursor move
	* Nicer display of floor() and ceil() in result

2019-10-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Angle/phasor notation for complex numbers

2019-10-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Bijective base-26 support
	* Improve preservation of display options from "to"-operator after mode changes

2019-10-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to use binary prefixes by default for information units
	* "b?"-syntax (unit expression prefix) for optimal binary prefix (e.g. "b?byte")
	* Improvements for '?' (optimal prefix) in conversion expression

2019-10-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved RPN support for history actions

2019-09-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add keyboard shortcuts for RPN stack manipulation
	* Add button for calculation of RPN stack total
	* Add context menu to RPN stack
	* Use RPN stack for values in insert function dialog and add "Apply to Stack" button

2019-09-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add RPN negate button with Ctrl+'-' shortcut