@@ -1,3 +1,7 @@
+2019-12-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Add base units (or local currency) to expression when "to"-expression specifies unit conversion and original expression does not include any units
+
 2019-12-19 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Clear expression entry when escape key is pressed
